tests/baselines/reference/0001_测试.types
=== /a/node_modules/@types/errorCh/index.d.ts ===
//@@{ 错误类:Error, 错误:error, 错误_:err }
导出 声明 种类 错误类 {
>错误类 : 错误类
>类型别名 :=> Error

    私有 错误: 文字
>错误 : string
>类型别名 :=> 文字

    //@{ "错误常量":"error", "错误类常量":"Error" }
    构造(错误_:"错误常量" | "错误类常量")
>错误_ : "错误常量" | "错误类常量"

    //@{ 错误属性:Error }
    公开 错误属性: 文字
>错误属性 : string
>类型别名 :=> 文字
}

=== /a/测试_1.ts ===
导入 * 转为 错误 来自 "errorCh"
>错误 : typeof 错误

变量 aaa = 新建 错误.错误类("错误常量")
>aaa : 错误.错误类
>类型别名 :=> Error
>新建 错误.错误类("错误常量") : 错误.错误类
>类型别名 :=> Error
>错误.错误类 : typeof 错误.错误类
>类型别名 :=> Error
>错误 : typeof 错误
>错误类 : typeof 错误.错误类
>类型别名 :=> Error
>"错误常量" : "错误常量"

aaa.错误属性
>aaa.错误属性 : string
>类型别名 :=> 文字
>aaa : 错误.错误类
>类型别名 :=> Error
>错误属性 : string
>类型别名 :=> 文字

aaa.错误   // 错误: 不能调用私有属性.
>aaa.错误 : string
>类型别名 :=> 文字
>aaa : 错误.错误类
>类型别名 :=> Error
>错误 : string
>类型别名 :=> 文字

=== /a/测试_2.ts ===
导入 { 错误类 } 来自 "errorCh"
>错误类 : typeof 错误类
>类型别名 :=> Error

变量 aaa = 新建 错误类("错误常量")
>aaa : 错误类
>类型别名 :=> Error
>新建 错误类("错误常量") : 错误类
>类型别名 :=> Error
>错误类 : typeof 错误类
>类型别名 :=> Error
>"错误常量" : "错误常量"

变量 { 错误属性 } = aaa   // 错误: 因为使用的是别名 可能不报错, 编译 es5 以下不报错
>错误属性 : string
>类型别名 :=> 文字
>aaa : 错误类
>类型别名 :=> Error

变量 bbb = 错误属性
>bbb : string
>类型别名 :=> 文字
>错误属性 : string
>类型别名 :=> 文字

aaa.错误   // 错误: 不能调用私有属性.
>aaa.错误 : string
>类型别名 :=> 文字
>aaa : 错误类
>类型别名 :=> Error
>错误 : string
>类型别名 :=> 文字


//************************* 中英*比较 *************************// 

=== /a/node_modules/@types/errorEn/index.d.ts ===
export declare class Error {
>Error : Error

    private error: string
>error : string
>类型别名 :=> 文字

    constructor(err: "error" | "Error")
>err : "error" | "Error"

    public Error: string
>Error : string
>类型别名 :=> 文字
}

=== /a/测试_3.ts ===
import *as e from "errorEn"
>e : typeof e

let aaa = new e.Error("Error")
>aaa : e.Error
>new e.Error("Error") : e.Error
>e.Error : typeof e.Error
>e : typeof e
>Error : typeof e.Error
>"Error" : "Error"

aaa.Error
>aaa.Error : string
>类型别名 :=> 文字
>aaa : e.Error
>Error : string
>类型别名 :=> 文字

aaa.error   // error: 不能调用私有属性.
>aaa.error : string
>类型别名 :=> 文字
>aaa : e.Error
>error : string
>类型别名 :=> 文字


=== /a/测试_4.ts ===
import { Error as ERROR } from "errorEn"
>Error : typeof ERROR
>ERROR : typeof ERROR

let aaa = new ERROR("Error")
>aaa : ERROR
>new ERROR("Error") : ERROR
>ERROR : typeof ERROR
>"Error" : "Error"

let { Error } = aaa     //error: 如导入不使用别名 这里会报错. 
>Error : string
>类型别名 :=> 文字
>aaa : ERROR

let bbb = Error
>bbb : string
>类型别名 :=> 文字
>Error : string
>类型别名 :=> 文字

aaa.error   // error: 不能调用私有属性.
>aaa.error : string
>类型别名 :=> 文字
>aaa : ERROR
>error : string
>类型别名 :=> 文字

